Bug 93777 - edid-decode spurious warning about string termination
Summary: edid-decode spurious warning about string termination
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: App/edid-decode (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Xorg Project Team
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-01-19 17:22 UTC by junkmailnotread
Modified: 2018-08-12 20:35 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description junkmailnotread 2016-01-19 17:22:46 UTC
EDID 1.3 states that if a Monitor Name descriptor (FCh) string is < 13 bytes then it should be terminated with ASCII 0Ah and padded with ASCII 20h.

If such a string is exactly 13 bytes then such termination and padding is obviously impossible.

However edid-decode will issue the following warning if the string is exactly 13 bytes:

"Name descriptor not terminated with a newline"

My feeling is that this warning is spurious because termination is only required if the string is < 13 bytes and the spec does not forbid 13-byte strings.
Comment 1 Alan Coopersmith 2018-08-12 20:35:10 UTC
Fixed in: 
https://git.linuxtv.org/edid-decode.git/commit/?id=9cb3744ac4f06ec7c66a3599a2caa2b94aa7a1d8

Thanks for the report.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.