edid-decode: fix spurious warning about string termination

Fixes bug https://bugs.freedesktop.org/show_bug.cgi?id=93777:

The Monitor Name description string can be exactly 13 bytes, which
case there is no newline at the end. Yet this was considered an
error.

Simplify the code by relying on extract_string to do the checking.

The extract_string function also checks for trailing spaces and
warns about that.

Signed-off-by: Hans Verkuil <hans.verkuil@cisco.com>